--- a/config/database.yml
+++ b/config/database.yml
@@ -49,6 +49,9 @@ test:
 #
 production:
   <<: *default
+  adapter: postgresql
+  encoding: unicode
+  pool: 5
   database: todo_production
   username: todo
   password: <%= ENV['TODO_DATABASE_PASSWORD'] %>
